<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_conversation"
    android:background="@color/conversation_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.Toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp">

            <bogomolov.aa.anochat.features.shared.RoundedImageView
                android:id="@+id/user_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:foregroundColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcDrawable="@drawable/user_icon" />


            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/user_photo"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Username" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/title_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/user_photo"
                app:layout_constraintStart_toEndOf="@+id/user_photo"
                tools:text="online" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>


    <androidx.compose.ui.platform.ComposeView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:visibility="visible"
        android:id="@+id/lazyList"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/conversation_background"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <RelativeLayout
        android:id="@+id/reply_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/margin_64dp"
        android:gravity="start"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/replyCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:cardBackgroundColor="@color/time_message_color"
            app:cardCornerRadius="6dp"
            app:cardElevation="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="4dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/replayAudio"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/reply_mark" />

                <bogomolov.aa.anochat.features.conversations.dialog.PlayAudioView
                    android:id="@+id/replayAudio"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </bogomolov.aa.anochat.features.conversations.dialog.PlayAudioView>

                <com.vanniktech.emoji.EmojiTextView
                    android:id="@+id/reply_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Reply message Reply message" />

                <ImageView
                    android:id="@+id/replyImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:duplicateParentState="true"
                    android:scaleType="centerCrop"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/removeReply"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:backgroundTint="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/clear_icon"
                    app:tint="#E91E63" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/fab_layout"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginEnd="4dp"
        android:gravity="bottom|right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:elevation="1dp"
            android:visibility="invisible"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:srcCompat="@drawable/mic_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:elevation="1dp"
            android:visibility="invisible"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_media" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:elevation="1dp"
            android:visibility="invisible"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:srcCompat="@drawable/camera_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:elevation="1dp"
            android:clickable="true"
            app:backgroundTint="@color/colorAccent"
            app:srcCompat="@drawable/plus_icon" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_layout"
        app:layout_constraintStart_toStartOf="parent">

        <bogomolov.aa.anochat.features.conversations.dialog.PlayAudioView
            android:id="@+id/playAudioInput"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/input_rounded_bg"
            android:elevation="1dp"
            android:minHeight="55dp"
            tools:visibility="visible">

            <com.vanniktech.emoji.EmojiEditText
                android:id="@+id/message_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_message"
                android:inputType="textShortMessage|textMultiLine"
                android:maxLength="1000"
                android:maxLines="5"
                android:minHeight="55dp"
                android:minLines="1"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/emojiIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/emojiIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/emoji_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/audioLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mic_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/audio_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/audio_length_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0:15" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:tint="#FF0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/audio_length_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/record_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>