...
                app:popUpToInclusive="true" />
    </fragment>
    <fragment
            android:id="@+id/imageViewFragment"
            android:name="bogomolov.aa.anochat.features.shared.ImageViewFragment" />
    <fragment
            android:id="@+id/userViewFragment"
            android:name="bogomolov.aa.anochat.features.contacts.user.UserViewFragment" />

    <navigation android:id="@+id/settings_graph"
        app:startDestination="@id/settingsFragment">
        <fragment
                android:id="@+id/settingsFragment"
...
        <fragment
            android:id="@+id/miniatureFragment"
            android:name="bogomolov.aa.anochat.features.settings.MiniatureFragment"
            android:label="@string/set_avatar" />
    </navigation>
    <navigation android:id="@+id/dialog_graph"
        app:startDestination="@id/conversationFragment">
        <fragment
            android:id="@+id/conversationFragment"
            android:name="bogomolov.aa.anochat.features.conversations.dialog.ConversationFragment">
            <action
                android:id="@+id/action_conversationFragment_to_sendMediaFragment"
                app:destination="@id/sendMediaFragment" />
...
