<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reply_message_action"
        android:title="@string/reply"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_messages_action"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/copy_messages_action"
        android:title="@string/copy"
        app:showAsAction="ifRoom"/>

</menu>